[gd_scene load_steps=2 format=3 uid="uid://bj3cyathghcth"]

[ext_resource type="Script" uid="uid://1xmxnjcffqbm" path="res://scripts/game_world/gui.gd" id="1_qypef"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_qypef")

[node name="CenterContainer" type="MarginContainer" parent="."]
visible = false
offset_right = 400.0
offset_bottom = 48.0

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.533333)

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Sun: 10000"

[node name="Button" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Sunflower"

[node name="Button2" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Peashooter"

[node name="Button3" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Fire_Pea"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 300.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Top_Bar" type="Control" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer/Top_Bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.533333)

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/Top_Bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/Top_Bar/MarginContainer"]
layout_mode = 2

[node name="Sun_Label" type="Label" parent="Control/VBoxContainer/Top_Bar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sun: 999999"

[node name="Plant_Shop" type="Control" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer/Plant_Shop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.533333)

[node name="Packet_Grid" type="VBoxContainer" parent="Control/VBoxContainer/Plant_Shop"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -116.5
offset_right = 26.0
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="Spawn_Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -23.0
offset_right = 56.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="Wave_Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 56.0
offset_top = -23.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
text = "Wave: 000/000"
horizontal_alignment = 1
